hw-03/exercise_1/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 3
  selector:
      matchLabels:
        app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - name: nginx-server
        image: nginx:1.19.4
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 20m
            memory: 128Mi
          requests: 
            cpu: 20m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-server-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30007
