hw-03/exercise_1/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-server-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30007
