hw-03/exercise_1/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - "jordi.student.lasalle.com"
      secretName: nginx-secret
  rules:
    - host: "jordi.student.lasalle.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: nginx-server-service
              servicePort: 80
